
Version X.X (XXXX-XX-XX)

     New: Added a method to set the preferred visible row count so that you can make the viewer default
          to a larger (or smaller) size without having to calculate font sizes.

   Fixed: Fixed the font specified in the UI not taking effect.
   Fixed: Fixed interpreting certain 64-bit values.

 Changed: Mutable* annotation classes were removed as it was starting to cause a combinatorial problem
          in the class hierarchy.
 Changed: Changed the default font for Mac OS X to Monaco 13pt.
 Changed: AnnotationCollectionListener now has separate events for added and removed. Logic for adding and
          removing has been moved up to AbstractAnnotationCollection to support this.
 Changed: Introduced MutableAnnotationCollection which enforces that added and removed annotations are
          also mutable (so that when doing add/remove, you can safely cast to the mutable sub-interface.)
 Changed: Improved generics on APIs (MutableGroupAnnotation only contains MutableAnnotation, for instance.)

Version 0.5 (2014-05-01)

     New: DateInterpreterStorage for storage and retrieval of date interpreters.
     New: Added new interpreters for signed types.
     New: Added new interpreter for 16-bit and 128-bit IEEE754 binary floating point.
     New: Added new interpreters for dates and times:
        * C time_t values
        * Java time values
        * Windows NT FILETIME
        * Windows NT SYSTEMTIME
        * Windows OLE VT_DATE / PT_APPTIME
        * IBM Notes TIMEDATE
        * Mac OS X NSDate / CFDateRef
        * Mac OS classic dates
     New: Added accessory bar components which can go at the bottom of the viewer. One shows where you are
          in the viewer and allows entering a new offset and length to jump to. The other shows the selected
          value using a selected interpreter. A combined ExpandableAccessoryBar ties these together with UI
          to expand and collapse the bars.